<?xml version="1.0"?>
<package format="3">
  <name>inspection_robot</name>
  <version>0.0.1</version>
  <description>Autonomous inspection robot with Nav2 and YOLOv8</description>
  <maintainer email="chearothvichea0599@gmail.com">Rothvichea CHEA</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>